--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<!-- Slick icons -->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
 	
+	<!-- Slick nav -->
+	<link rel="stylesheet" href="css/slicknav.css">
+
     <!-- Et-line icons -->
     <link rel="stylesheet" href="css/et-line.css">
 
@@ -69,20 +72,20 @@
 				<!-- /title -->
 				<div class="about-us-text">
 					<div class="row">
-						<div class="col col-4">
+						<div class="col col-4 col-md-12 col-xs-12">
 							<blockquote>
 								<p>Design is not making beauty, beauty emerges from selection, affinities, integration, love.</p>
 								<span>— Louis Kahn</span>
 							</blockquote>	
 						</div>
 						<!-- /col -->
-						<div class="col col-4">
+						<div class="col col-4 col-md-6 col-sm-6">
 							<p class="default-text">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. 
 							</p>
 						</div>
 						<!--/ col -->
-						<div class="col col-4">
+						<div class="col col-4 col-md-6 col-sm-6">
 							<p class="default-text">
 								Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam ipsum.
 							</p>
@@ -94,7 +97,7 @@
 			<!-- /about-us-text -->
 				<div class="team-wrapper">
 					<div class="row">
-						<div class="col col-4">
+						<div class="col col-4 col-sm-12">
 							<div class="team-item">
 								<div class="team-item-img">
 									<img src="img/team-item-1.jpg" alt="">
@@ -149,7 +152,7 @@
 							<!-- /team-item -->
 						</div>
 						<!-- /col -->
-						<div class="col col-4">
+						<div class="col col-4 col-sm-12">
 								<div class="team-item">
 									<div class="team-item-img">
 										<img src="img/team-item-2.jpg" alt="">
@@ -204,7 +207,7 @@
 								<!-- /team-item -->
 							</div>
 							<!-- /col -->
-							<div class="col col-4">
+							<div class="col col-4 col-sm-12">
 								<div class="team-item">
 									<div class="team-item-img">
 										<img src="img/team-item-3.jpg" alt="">
@@ -294,20 +297,20 @@
 								</ul>
 								<div id="branding">
 									<div class="row">
-										<div class="col col-4">
+										<div class="col col-4 col-md-12">
 										<blockquote>
 											<p>A brand for a company is like a reputation for a person. You earn reputation by trying to do hard things well.</p>
 											<span>— Jeff Bezos</span>
 										</blockquote>	
 										</div>
 										<!-- /col -->
-										<div class="col col-4">
+										<div class="col col-4 col-md-6">
 										<p class="default-text">
 											Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum volutpat nibh, accumsan purus. Lorem ipsum dolor sit semper amet, consectetur adipiscing elit. In maximus ligula metus pellentesque mattis. 
 										</p>
 										</div>
 										<!--/ col -->
-										<div class="col col-4">
+										<div class="col col-4 col-md-6">
 										<p class="default-text">
 											Donec vel ultricies purus. Nam dictum sem, ipsum aliquam . Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. 
 										</p>
@@ -318,20 +321,20 @@
 								</div>
 								<div id="web-design">
 									<div class="row">
-										<div class="col col-4">
+										<div class="col col-4 col-md-12">
 											<blockquote>
 												<p>A brand for a company is like a reputation for a person. You earn reputation by trying to do hard things well.</p>
 												<span>— Jeff Bezos</span>
 											</blockquote>	
 										</div>
 										<!-- /col -->
-										<div class="col col-4">
+										<div class="col col-4 col-md-6">
 											<p class="default-text">
 												Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum volutpat nibh, accumsan purus. Lorem ipsum dolor sit semper amet, consectetur adipiscing elit. In maximus ligula metus pellentesque mattis. 
 											</p>
 										</div>
 										<!--/ col -->
-										<div class="col col-4">
+										<div class="col col-4 col-md-6">
 											<p class="default-text">
 												Donec vel ultricies purus. Nam dictum sem, ipsum aliquam . Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. 
 											</p>
@@ -342,7 +345,7 @@
 								</div>
 								<div id="graphic-design">
 									<div class="row">
-										<div class="col col-4">
+										<div class="col col-4 col-md-12">
 											<blockquote>
 												<p>A brand for a company is like 
 												a reputation for a person. You earn reputation by trying to do hard things well.</p>
@@ -350,13 +353,13 @@
 											</blockquote>	
 										</div>
 										<!-- /col -->
-										<div class="col col-4">
+										<div class="col col-4 col-md-6">
 											<p class="default-text">
 												Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum volutpat nibh, accumsan purus. Lorem ipsum dolor sit semper amet, consectetur adipiscing elit. In maximus ligula metus pellentesque mattis.  
 											</p>
 										</div>
 										<!--/ col -->
-										<div class="col col-4">
+										<div class="col col-4 col-md-6">
 											<p class="default-text">
 												Donec vel ultricies purus. Nam dictum sem, ipsum aliquam . Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. 
 											</p>
@@ -367,20 +370,20 @@
 								</div>
 								<div id="development">
 									<div class="row">
-										<div class="col col-4">
+										<div class="col col-4 col-md-12">
 											<blockquote>
 												<p>A brand for a company is like a reputation for a person. You earn reputation by trying to do hard things well.</p>
 												<span>— Jeff Bezos</span>
 											</blockquote>	
 										</div>
 										<!-- /col -->
-										<div class="col col-4">
+										<div class="col col-4 col-md-6">
 											<p class="default-text">
 												Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum volutpat nibh, accumsan purus. Lorem ipsum dolor sit semper amet, consectetur adipiscing elit. In maximus ligula metus pellentesque mattis.  
 											</p>
 										</div>
 										<!--/ col -->
-										<div class="col col-4">
+										<div class="col col-4 col-md-6">
 											<p class="default-text">
 												Donec vel ultricies purus. Nam dictum sem, ipsum aliquam . Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. 
 											</p>
@@ -391,20 +394,20 @@
 								</div>
 								<div id="photography">
 									<div class="row">
-										<div class="col col-4">
+										<div class="col col-4 col-md-12">
 											<blockquote>
 												<p>A brand for a company is like a reputation for a person. You earn reputation by trying to do hard things well.</p>
 												<span>— Jeff Bezos</span>
 											</blockquote>	
 										</div>
 										<!-- /col -->
-										<div class="col col-4">
+										<div class="col col-4 col-md-6">
 											<p class="default-text">
 												Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum volutpat nibh, accumsan purus. Lorem ipsum dolor sit semper amet, consectetur adipiscing elit. In maximus ligula metus pellentesque mattis. 
 											</p>
 										</div>
 										<!--/ col -->
-										<div class="col col-4">
+										<div class="col col-4 col-md-6">
 											<p class="default-text">
 												Donec vel ultricies purus. Nam dictum sem, ipsum aliquam . Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. 
 											</p>
@@ -424,7 +427,7 @@
 		<div class="lets-talk bg-black">
 			<div class="container">
 				<div class="row">
-					<div class="col col-6">
+					<div class="col col-6 col-md-12">
 						<div class="lets-talk-content">
 							<div class="title section-title-light title-white">
 							<span>Looking for exclusive digital services?</span>
@@ -437,7 +440,7 @@
 						<!-- /lets-lalk-content -->
 					</div>
 					<!-- /col -->
-					<div class="col col-6">
+					<div class="col col-6 d-md-none">
 						<img src="img/lets-talk-img.png" class="lets-talk-img" alt="">
 					</div>
 					<!-- /col -->
@@ -583,7 +586,7 @@
 				<span>Why Choose Us?</span>
 				</div>
 				<div class="row">
-				<div class="col col-4">
+				<div class="col col-4 col-md-12">
 					<div class="advantages">
 					<span class="icon icon-flag"></span>
 					<div class="title-light text-center">
@@ -596,7 +599,7 @@
 					</div>
 				</div>
 				<!-- / col -->
-				<div class="col col-4">
+				<div class="col col-4 col-md-12">
 					<div class="advantages">
 					<span class="icon icon-clock"></span>
 					<div class="title-light text-center">
@@ -608,7 +611,7 @@
 					</div>
 				</div>
 				<!-- / col -->
-				<div class="col col-4">
+				<div class="col col-4 col-md-12">
 					<div class="advantages">
 					<span class="icon icon-hotairballoon"></span>
 					<div class="title-light text-center">
@@ -623,7 +626,7 @@
 				</div>
 				<!-- / row -->
 				<div class="row">
-				<div class="col col-4">
+				<div class="col col-4 col-md-12">
 					<div class="advantages">
 					<span class="icon icon-heart"></span>
 					<div class="title-light text-center">
@@ -635,7 +638,7 @@
 					</div>
 				</div>
 				<!-- / col -->
-				<div class="col col-4">
+				<div class="col col-4 col-md-12">
 					<div class="advantages">
 					<span class="icon icon-linegraph"></span>
 					<div class="title-light text-center">
@@ -647,7 +650,7 @@
 					</div>
 				</div>
 				<!-- / col -->
-				<div class="col col-4">
+				<div class="col col-4 col-md-12">
 					<div class="advantages">
 					<span class="icon icon-chat"></span>
 					<div class="title-light text-center">
@@ -718,7 +721,7 @@
 				</div>
 				<!-- /title -->
 				<div class="row">
-					<div class="col col-4">
+					<div class="col col-4 col-md-12">
 						<div class="news-block">
 							<div class="news-img">
 								<a href=""><img src="img/latest-news-1.jpg" alt=""></a>
@@ -734,7 +737,7 @@
 						</div>
 					</div>
 					<!-- /col -->
-					<div class="col col-4">
+					<div class="col col-4 col-md-12">
 						<div class="news-block">
 							<div class="news-img">
 								<a href=""><img src="img/latest-news-2.jpg" alt=""></a>
@@ -750,7 +753,7 @@
 						</div>
 					</div>
 					<!-- /col -->
-					<div class="col col-4">
+					<div class="col col-4 col-md-12">
 						<div class="news-block">
 							<div class="news-img">
 								<a href=""><img src="img/latest-news-3.jpg" alt=""></a>
@@ -796,10 +799,10 @@
 				</div>
 				<!-- /title -->
 				<div class="row">
-					<div class="col col-8 m-auto">
+					<div class="col col-8 col-md-12 m-auto">
 						<div class="contact-items-wrapper">
 							<div class="row">
-								<div class="col col-4">
+								<div class="col col-4 col-sm-12">
 									<div class="contact-item">
 										<div class="rhomb-icon black-icon contact-item-icon">
 											<i class="fa fa-phone"></i>
@@ -814,7 +817,7 @@
 									<!-- /contact-item -->
 								</div>
 								<!-- /col -->
-								<div class="col col-4">
+								<div class="col col-4 col-sm-12">
 									<div class="contact-item">
 										<div class="rhomb-icon black-icon contact-item-icon">
 											<i class="fa fa-map-marker"></i>
@@ -829,7 +832,7 @@
 									<!-- /contact-item -->
 								</div>
 								<!-- /col -->
-								<div class="col col-4">
+								<div class="col col-4 col-sm-12">
 									<div class="contact-item">
 										<div class="rhomb-icon black-icon contact-item-icon">
 											<i class="fa fa-envelope"></i>
@@ -843,27 +846,33 @@
 									</div>
 									<!-- /contact-item -->
 								</div>
-								<!-- /col -->					
+								<!-- /col -->				
 							</div>
 							<!-- /row -->
 						</div>
 						<!-- /contact-items-wrapper -->
 						<form class="contact-form">
-							<div class="form-col">
-								<input type="text" name="user-name" id="user-name" class="form-control" placeholder="Name">
-								<input type="text" name="user-email" id="user-email" class="form-control" placeholder="Email">
+							<div class="form-row">
+								<div class="form-col">
+									<input type="text" name="user-name" id="user-name" class="form-control" placeholder="Name">
+									<input type="text" name="user-email" id="user-email" class="form-control" placeholder="Email">
+								</div>
+								<!-- /form-col -->
+								<div class="form-col">
+									<textarea name="user-message" id="user-message" class="form-control" placeholder="Message"></textarea>
+								</div>
+								<!-- /form-col -->
 							</div>
-							<!-- /form-col -->
-							<div class="form-col">
-								<textarea name="user-message" id="user-message" class="form-control" placeholder="Message"></textarea>
-							</div>
-							<!-- /form-col -->
-							<div class="form-info pull-left">
+							<!-- /form-row -->
+							<div class="form-submit">
+								<div class="form-info pull-left">
 								<span><i class="fa fa-info-circle"></i>All the fields are required</span>
+								</div>
+								<!-- /form-info -->
+								<button type="submit" class="btn btn-black pull-right">Submit message</button>
+								<!-- /button -->
 							</div>
-							<!-- /form-info -->
-							<button type="submit" class="btn btn-black pull-right">Submit message</button>
-							<!-- /button -->
+							<!-- /form-submit -->
 						</form>
 						<!-- /contact-form -->
 					</div>
@@ -876,16 +885,15 @@
 		<!-- /contacts -->
 	</div>
 	<div class="map-container">
-		<div id="map">
+		<div id="map"></div>
 		<div class="on-map-block">
 			<div class="on-map-block-content">
 				<div class="rhomb-icon white-icon large-icon">
 					<i class="fa fa-map-marker"></i>
 				</div>
-			<div class="title title-white">
-				<span>Open the map</span>
-				<i class="fa fa-angle-down"></i>
-			</div>
+				<div class="title title-white">
+					<span>Open the map <i class="fa fa-angle-down"></i></span>
+				</div>			
 			</div>
 			<!-- /on-map-content -->
 		</div>
@@ -947,6 +955,8 @@
 	<script src="js/header-scroll.js"></script>
 	<!-- Scroll to -->
 	<script src="js/scroll-to.js"></script>
+	<!-- Slick nav -->
+	<script src="js/jquery.slicknav.min.js"></script>
 	<!-- Init plugins -->
 	<script src="js/init.js"></script>
 </body>
